raw/piston-image-0.10.3--2016-11-11-04-24-18--1.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./piston-image-0.10.3
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling image v0.10.3 (file:///root/benchmarks/piston-image-0.10.3)
time: 0.038; rss: 54MB	parsing
Lines of code:             12000
Pre-expansion node count:  90152
time: 0.000; rss: 54MB	recursion limit
time: 0.000; rss: 54MB	crate injection
time: 0.000; rss: 54MB	plugin loading
time: 0.000; rss: 54MB	plugin registration
time: 0.068; rss: 93MB	expansion
time: 0.000; rss: 93MB	maybe building test harness
time: 0.002; rss: 93MB	maybe creating a macro crate
Post-expansion node count: 148881
time: 0.000; rss: 93MB	checking for inline asm in case the target doesn't support it
time: 0.003; rss: 93MB	complete gated feature checking
time: 0.006; rss: 93MB	early lint checks
time: 0.001; rss: 93MB	AST validation
time: 0.020; rss: 98MB	name resolution
time: 0.014; rss: 106MB	lowering ast -> hir
time: 0.003; rss: 110MB	indexing hir
time: 0.002; rss: 110MB	attribute checking
time: 0.001; rss: 100MB	language item collection
time: 0.003; rss: 100MB	lifetime resolution
time: 0.000; rss: 100MB	looking for entry point
time: 0.000; rss: 100MB	looking for plugin registrar
time: 0.010; rss: 106MB	region resolution
time: 0.002; rss: 106MB	loop checking
time: 0.001; rss: 106MB	static item recursion checking
time: 0.052; rss: 105MB	compute_incremental_hashes_map
time: 0.000; rss: 105MB	load_dep_graph
time: 0.015; rss: 108MB	type collecting
time: 0.000; rss: 108MB	variance inference
time: 0.015; rss: 110MB	coherence checking
time: 0.067; rss: 111MB	wf checking
time: 0.139; rss: 113MB	item-types checking
time: 0.713; rss: 124MB	item-bodies checking
time: 0.000; rss: 124MB	drop-impl checking
time: 0.048; rss: 129MB	const checking
time: 0.008; rss: 129MB	privacy checking
time: 0.001; rss: 129MB	stability index
time: 0.006; rss: 129MB	intrinsic checking
time: 0.003; rss: 129MB	effect checking
time: 0.013; rss: 129MB	match checking
time: 0.009; rss: 129MB	liveness checking
time: 0.039; rss: 129MB	rvalue checking
time: 0.091; rss: 171MB	MIR dump
  time: 0.011; rss: 171MB	SimplifyCfg
  time: 0.019; rss: 171MB	QualifyAndPromoteConstants
  time: 0.021; rss: 171MB	TypeckMir
  time: 0.001; rss: 171MB	SimplifyBranches
  time: 0.004; rss: 171MB	SimplifyCfg
time: 0.057; rss: 171MB	MIR cleanup and validation
time: 0.106; rss: 171MB	borrow checking
time: 0.003; rss: 171MB	reachability checking
time: 0.007; rss: 171MB	death checking
time: 0.007; rss: 174MB	stability checking
time: 0.000; rss: 174MB	unused lib feature checking
time: 0.062; rss: 174MB	lint checking
time: 0.000; rss: 174MB	resolving dependency formats
  time: 0.001; rss: 174MB	NoLandingPads
  time: 0.005; rss: 174MB	SimplifyCfg
  time: 0.010; rss: 174MB	EraseRegions
  time: 0.002; rss: 174MB	AddCallGuards
  time: 0.041; rss: 178MB	ElaborateDrops
  time: 0.001; rss: 178MB	NoLandingPads
  time: 0.009; rss: 178MB	SimplifyCfg
  time: 0.006; rss: 178MB	InstCombine
  time: 0.002; rss: 178MB	Deaggregator
  time: 0.000; rss: 178MB	CopyPropagation
  time: 0.007; rss: 179MB	SimplifyLocals
  time: 0.002; rss: 179MB	AddCallGuards
  time: 0.000; rss: 179MB	PreTrans
time: 0.086; rss: 179MB	MIR optimisations
  time: 0.015; rss: 179MB	write metadata
  time: 0.397; rss: 193MB	translation item collection
  time: 0.024; rss: 195MB	codegen unit partitioning
  time: 0.022; rss: 317MB	internalize symbols
time: 2.445; rss: 317MB	translation
time: 0.000; rss: 317MB	assert dep graph
time: 0.000; rss: 317MB	serialize dep graph
  time: 0.212; rss: 229MB	llvm function passes [0]
  time: 0.082; rss: 233MB	llvm module passes [0]
  time: 4.236; rss: 230MB	codegen passes [0]
  time: 0.000; rss: 230MB	codegen passes [0]
time: 4.837; rss: 230MB	LLVM passes
time: 0.000; rss: 230MB	serialize work products
time: 0.130; rss: 100MB	linking
done
